Solved lag problem when pushing to FriendDetail

--- a/enHueco/Views/Base.lproj/Main.storyboard
+++ b/enHueco/Views/Base.lproj/Main.storyboard
@@ -362,7 +362,7 @@
                             </button>
                         </subviews>
                         <animations/>
-                        <color key="backgroundColor" red="0.96969696969999997" green="0.95544995359999996" blue="0.94956395819999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="c1o-Rf-aDb" firstAttribute="centerX" secondItem="Mgd-ox-gDW" secondAttribute="centerX" id="6Lf-mf-N2Z">
                                 <variation key="heightClass=regular-widthClass=compact" constant="47"/>
@@ -415,32 +415,32 @@
                                 <exclude reference="Ax7-yd-Icu"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="Q8A-pN-o6O"/>
+                                <exclude reference="hb4-PE-8eA"/>
+                                <exclude reference="l7s-F7-fQb"/>
+                                <exclude reference="H2m-ha-8ry"/>
+                                <exclude reference="Vb0-BO-jcW"/>
+                                <exclude reference="vaz-Rg-l1E"/>
+                                <exclude reference="92n-bt-xAh"/>
+                                <exclude reference="Jpd-ed-3w1"/>
+                                <exclude reference="6Lf-mf-N2Z"/>
+                                <exclude reference="Eb3-XQ-mPQ"/>
+                                <exclude reference="RdO-75-Rvy"/>
+                                <exclude reference="CqA-WP-toW"/>
+                                <exclude reference="ZK8-RK-w6p"/>
+                                <exclude reference="hcA-29-VwW"/>
+                                <exclude reference="FvL-mn-8eG"/>
+                                <exclude reference="Wq8-iT-MrT"/>
+                                <exclude reference="lWL-j8-Mnv"/>
+                                <exclude reference="7AD-VT-m3I"/>
+                                <exclude reference="dS9-LY-dO8"/>
+                                <exclude reference="x6K-jl-Gw7"/>
                                 <exclude reference="IqZ-YG-JSQ"/>
                                 <exclude reference="Kn8-tA-ODh"/>
                                 <exclude reference="PE9-WG-9Ym"/>
                                 <exclude reference="FBr-si-7JN"/>
                                 <exclude reference="c0o-Mr-Qgr"/>
                                 <exclude reference="utb-aA-H6A"/>
-                                <exclude reference="FvL-mn-8eG"/>
-                                <exclude reference="Wq8-iT-MrT"/>
-                                <exclude reference="lWL-j8-Mnv"/>
-                                <exclude reference="CqA-WP-toW"/>
-                                <exclude reference="ZK8-RK-w6p"/>
-                                <exclude reference="hcA-29-VwW"/>
-                                <exclude reference="7AD-VT-m3I"/>
-                                <exclude reference="dS9-LY-dO8"/>
-                                <exclude reference="x6K-jl-Gw7"/>
-                                <exclude reference="92n-bt-xAh"/>
-                                <exclude reference="Jpd-ed-3w1"/>
-                                <exclude reference="6Lf-mf-N2Z"/>
-                                <exclude reference="Eb3-XQ-mPQ"/>
-                                <exclude reference="RdO-75-Rvy"/>
-                                <exclude reference="H2m-ha-8ry"/>
-                                <exclude reference="Vb0-BO-jcW"/>
-                                <exclude reference="vaz-Rg-l1E"/>
-                                <exclude reference="Q8A-pN-o6O"/>
-                                <exclude reference="hb4-PE-8eA"/>
-                                <exclude reference="l7s-F7-fQb"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -455,32 +455,32 @@
                                 <include reference="Ax7-yd-Icu"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="Q8A-pN-o6O"/>
+                                <include reference="hb4-PE-8eA"/>
+                                <include reference="l7s-F7-fQb"/>
+                                <include reference="H2m-ha-8ry"/>
+                                <include reference="Vb0-BO-jcW"/>
+                                <include reference="vaz-Rg-l1E"/>
+                                <include reference="92n-bt-xAh"/>
+                                <include reference="Jpd-ed-3w1"/>
+                                <include reference="6Lf-mf-N2Z"/>
+                                <include reference="Eb3-XQ-mPQ"/>
+                                <include reference="RdO-75-Rvy"/>
+                                <include reference="CqA-WP-toW"/>
+                                <include reference="ZK8-RK-w6p"/>
+                                <include reference="hcA-29-VwW"/>
+                                <include reference="FvL-mn-8eG"/>
+                                <include reference="Wq8-iT-MrT"/>
+                                <include reference="lWL-j8-Mnv"/>
+                                <include reference="7AD-VT-m3I"/>
+                                <include reference="dS9-LY-dO8"/>
+                                <include reference="x6K-jl-Gw7"/>
                                 <include reference="IqZ-YG-JSQ"/>
                                 <include reference="Kn8-tA-ODh"/>
                                 <include reference="PE9-WG-9Ym"/>
                                 <include reference="FBr-si-7JN"/>
                                 <include reference="c0o-Mr-Qgr"/>
                                 <include reference="utb-aA-H6A"/>
-                                <include reference="FvL-mn-8eG"/>
-                                <include reference="Wq8-iT-MrT"/>
-                                <include reference="lWL-j8-Mnv"/>
-                                <include reference="CqA-WP-toW"/>
-                                <include reference="ZK8-RK-w6p"/>
-                                <include reference="hcA-29-VwW"/>
-                                <include reference="7AD-VT-m3I"/>
-                                <include reference="dS9-LY-dO8"/>
-                                <include reference="x6K-jl-Gw7"/>
-                                <include reference="92n-bt-xAh"/>
-                                <include reference="Jpd-ed-3w1"/>
-                                <include reference="6Lf-mf-N2Z"/>
-                                <include reference="Eb3-XQ-mPQ"/>
-                                <include reference="RdO-75-Rvy"/>
-                                <include reference="H2m-ha-8ry"/>
-                                <include reference="Vb0-BO-jcW"/>
-                                <include reference="vaz-Rg-l1E"/>
-                                <include reference="Q8A-pN-o6O"/>
-                                <include reference="hb4-PE-8eA"/>
-                                <include reference="l7s-F7-fQb"/>
                             </mask>
                         </variation>
                     </view>
@@ -1389,10 +1389,10 @@
                                     </mask>
                                     <mask key="constraints">
                                         <exclude reference="Vn0-Ca-pd6"/>
-                                        <exclude reference="QIY-ng-Ff6"/>
-                                        <exclude reference="XPd-qg-z3N"/>
                                         <exclude reference="ync-D1-gcQ"/>
                                         <exclude reference="yx4-iY-Xag"/>
+                                        <exclude reference="QIY-ng-Ff6"/>
+                                        <exclude reference="XPd-qg-z3N"/>
                                     </mask>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact">
@@ -1402,10 +1402,10 @@
                                     </mask>
                                     <mask key="constraints">
                                         <include reference="Vn0-Ca-pd6"/>
-                                        <include reference="QIY-ng-Ff6"/>
-                                        <include reference="XPd-qg-z3N"/>
                                         <include reference="ync-D1-gcQ"/>
                                         <include reference="yx4-iY-Xag"/>
+                                        <include reference="QIY-ng-Ff6"/>
+                                        <include reference="XPd-qg-z3N"/>
                                     </mask>
                                 </variation>
                             </view>
@@ -1470,8 +1470,7 @@
                                         <exclude reference="BIX-4F-8xO"/>
                                     </mask>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                    <rect key="frame" x="91" y="292" width="218" height="21"/>
+                                <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="constraints">
                                         <exclude reference="5pI-8t-iAW"/>
                                         <include reference="BIX-4F-8xO"/>
@@ -1517,7 +1516,7 @@
                                     <segue destination="bcN-Rt-dl3" kind="presentation" id="Gpu-v9-3FX"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WSt-5M-VMJ">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WSt-5M-VMJ">
                                 <rect key="frame" x="242" y="421" width="116" height="76"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.0" green="0.63425268310000005" blue="0.52588851120000002" alpha="0.74060388513513509" colorSpace="calibratedRGB"/>
@@ -1648,23 +1647,23 @@
                                 <exclude reference="1UA-qf-JlD"/>
                                 <exclude reference="OdY-Ws-L4p"/>
                                 <exclude reference="oIL-H6-3me"/>
+                                <exclude reference="2l3-8W-DM7"/>
+                                <exclude reference="9KV-G0-ALJ"/>
+                                <exclude reference="ThQ-3z-ZgW"/>
                                 <exclude reference="Jn0-T5-prG"/>
                                 <exclude reference="snk-fR-MYX"/>
                                 <exclude reference="0yq-M5-spF"/>
                                 <exclude reference="J1f-ek-HuV"/>
                                 <exclude reference="OxV-mM-yD9"/>
                                 <exclude reference="p2g-Sn-Ys4"/>
-                                <exclude reference="2l3-8W-DM7"/>
-                                <exclude reference="9KV-G0-ALJ"/>
-                                <exclude reference="ThQ-3z-ZgW"/>
                                 <exclude reference="8Pj-1A-uMT"/>
                                 <exclude reference="PrK-Ob-lqf"/>
                                 <exclude reference="Ysx-g6-RLj"/>
                                 <exclude reference="G93-Yd-0TA"/>
+                                <exclude reference="Amm-c8-Mfh"/>
                                 <exclude reference="dsD-Qy-8MW"/>
                                 <exclude reference="hCf-xH-ZXx"/>
                                 <exclude reference="hiM-cP-Xlz"/>
-                                <exclude reference="Amm-c8-Mfh"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -1681,6 +1680,9 @@
                                 <include reference="1UA-qf-JlD"/>
                                 <include reference="OdY-Ws-L4p"/>
                                 <include reference="oIL-H6-3me"/>
+                                <include reference="2l3-8W-DM7"/>
+                                <exclude reference="9KV-G0-ALJ"/>
+                                <include reference="ThQ-3z-ZgW"/>
                                 <include reference="Jn0-T5-prG"/>
                                 <exclude reference="eST-cl-HsK"/>
                                 <include reference="snk-fR-MYX"/>
@@ -1689,9 +1691,6 @@
                                 <include reference="OxV-mM-yD9"/>
                                 <include reference="p2g-Sn-Ys4"/>
                                 <exclude reference="t7W-xB-riE"/>
-                                <include reference="2l3-8W-DM7"/>
-                                <exclude reference="9KV-G0-ALJ"/>
-                                <include reference="ThQ-3z-ZgW"/>
                                 <exclude reference="8Pj-1A-uMT"/>
                                 <exclude reference="JWH-Lt-3Eu"/>
                                 <include reference="PrK-Ob-lqf"/>
@@ -1700,11 +1699,11 @@
                                 <exclude reference="ta7-7t-C1k"/>
                                 <include reference="G93-Yd-0TA"/>
                                 <exclude reference="iZq-ku-ZBj"/>
+                                <exclude reference="8ps-n9-dWk"/>
+                                <include reference="Amm-c8-Mfh"/>
                                 <include reference="dsD-Qy-8MW"/>
                                 <include reference="hCf-xH-ZXx"/>
                                 <include reference="hiM-cP-Xlz"/>
-                                <exclude reference="8ps-n9-dWk"/>
-                                <include reference="Amm-c8-Mfh"/>
                             </mask>
                         </variation>
                     </view>
@@ -3879,6 +3878,9 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="82" y="8" width="125" height="24"/>
+                                                    </variation>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" ↗︎3:30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0GO-9B-mab">
                                                     <rect key="frame" x="-42" y="-21" width="42" height="21"/>
@@ -4004,6 +4006,9 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="82" y="8" width="125" height="21"/>
+                                                    </variation>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" ↗︎3:30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TiB-v5-8U8">
                                                     <rect key="frame" x="-42" y="-21" width="42" height="21"/>
