Fixes to Common Gaps functionality (seems to be working). UI minor changes.

--- a/enHueco/Views/Base.lproj/Main.storyboard
+++ b/enHueco/Views/Base.lproj/Main.storyboard
@@ -390,7 +390,6 @@
                                 </variation>
                                 <connections>
                                     <action selector="commonGapsButtonPressed:" destination="6lP-I6-YrK" eventType="touchUpInside" id="3gd-9o-qvn"/>
-                                    <segue destination="MZQ-1W-rV3" kind="presentation" id="511-Xs-O6L"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -537,7 +536,7 @@
         <!--Common Gaps View Controller-->
         <scene sceneID="Wqs-6V-WUM">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="MZQ-1W-rV3" customClass="CommonGapsViewController" customModule="enHueco" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CommonGapsViewController" automaticallyAdjustsScrollViewInsets="NO" id="MZQ-1W-rV3" customClass="CommonGapsViewController" customModule="enHueco" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="HYm-aL-qei"/>
                         <viewControllerLayoutGuide type="bottom" id="XAq-bZ-sVd"/>
@@ -712,13 +711,13 @@
                                 <exclude reference="NFn-jL-nnG"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="NO5-a5-46C"/>
                                 <exclude reference="Prh-Hy-waS"/>
                                 <exclude reference="djt-hz-bzN"/>
                                 <exclude reference="yVg-YZ-WIJ"/>
                                 <exclude reference="0V7-Pt-aAf"/>
                                 <exclude reference="joF-vX-W47"/>
                                 <exclude reference="l5m-Ay-ijQ"/>
-                                <exclude reference="NO5-a5-46C"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -727,13 +726,13 @@
                                 <include reference="NFn-jL-nnG"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="NO5-a5-46C"/>
                                 <include reference="Prh-Hy-waS"/>
                                 <include reference="djt-hz-bzN"/>
                                 <include reference="yVg-YZ-WIJ"/>
                                 <include reference="0V7-Pt-aAf"/>
                                 <include reference="joF-vX-W47"/>
                                 <include reference="l5m-Ay-ijQ"/>
-                                <include reference="NO5-a5-46C"/>
                             </mask>
                         </variation>
                     </view>
@@ -757,6 +756,7 @@
                         <viewControllerLayoutGuide type="bottom" id="f0r-B1-MWz"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="X8T-Zz-SHr">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="82D-x2-MLE">
@@ -768,6 +768,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OJN-pm-JQS" id="ege-5K-We8">
+                                            <rect key="frame" x="0.0" y="0.0" width="240" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a7b-TT-nvZ">
@@ -829,10 +830,10 @@
                                 <exclude reference="82D-x2-MLE"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="46K-28-47Q"/>
                                 <exclude reference="Si8-nm-5xr"/>
                                 <exclude reference="dVp-fn-kOq"/>
                                 <exclude reference="nUM-dc-Aip"/>
-                                <exclude reference="46K-28-47Q"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -840,10 +841,10 @@
                                 <include reference="82D-x2-MLE"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="46K-28-47Q"/>
                                 <include reference="Si8-nm-5xr"/>
                                 <include reference="dVp-fn-kOq"/>
                                 <include reference="nUM-dc-Aip"/>
-                                <include reference="46K-28-47Q"/>
                             </mask>
                         </variation>
                     </view>
@@ -1306,8 +1307,7 @@
                                                             <exclude reference="uZd-yz-WEP"/>
                                                         </mask>
                                                     </variation>
-                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                        <rect key="frame" x="8" y="8" width="66" height="21"/>
+                                                    <variation key="heightClass=regular-widthClass=compact">
                                                         <mask key="constraints">
                                                             <exclude reference="bpT-re-OCf"/>
                                                             <include reference="hCb-xR-eO6"/>
@@ -1444,8 +1444,7 @@
                                                             <exclude reference="bgQ-GC-rxl"/>
                                                         </mask>
                                                     </variation>
-                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                                        <rect key="frame" x="8" y="8" width="66" height="21"/>
+                                                    <variation key="heightClass=regular-widthClass=compact">
                                                         <mask key="constraints">
                                                             <include reference="IIX-P4-XG8"/>
                                                             <include reference="Voa-2T-j06"/>
@@ -3103,7 +3102,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Fff-NO-5Jh"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="sfE-8R-B8M">
-                        <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hdt-Qf-EO5">
